--- a/style.css
+++ b/style.css
@@ -15,10 +15,8 @@ button {
     border: none;
 }
 
-nav {
-    position:fixed;
-    top: 0;
-    width: 100%;
+div.tab {
+    padding-bottom: 20px;
 }
 
 img {
